// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Symbols - Brace Snapshot 1`] = `
Array [
  0.04,
  0.7,
  0.04,
  0.69,
  0.03609,
  0.69969,
  0.03765,
  0.68982,
  0.03227,
  0.69878,
  0.03536,
  0.68927,
  0.02865,
  0.69728,
  0.03319,
  0.68837,
  0.02531,
  0.69523,
  0.03118,
  0.68714,
  0.02232,
  0.69268,
  0.02939,
  0.68561,
  0.01977,
  0.68969,
  0.02786,
  0.68382,
  0.01772,
  0.68635,
  0.02663,
  0.68181,
  0.01622,
  0.68273,
  0.02573,
  0.67964,
  0.01531,
  0.67891,
  0.02518,
  0.67735,
  0.015,
  0.675,
  0.025,
  0.675,
  0.015,
  0.37,
  0.025,
  0.37,
  0.01482,
  0.36765,
  0.02469,
  0.36609,
  0.01427,
  0.36536,
  0.02378,
  0.36227,
  0.01337,
  0.36319,
  0.02228,
  0.35865,
  0.01214,
  0.36118,
  0.02023,
  0.35531,
  0.01061,
  0.35939,
  0.01768,
  0.35232,
  0.00882,
  0.35786,
  0.01469,
  0.34977,
  0.00681,
  0.35663,
  0.01135,
  0.34772,
  0.00464,
  0.35573,
  0.00773,
  0.34622,
  0.00235,
  0.35518,
  0.00391,
  0.34531,
  0,
  0.355,
  0,
  0.345,
  0,
  0.345,
  0,
  0.355,
  0.00235,
  0.34482,
  0.00391,
  0.35469,
  0.00464,
  0.34427,
  0.00773,
  0.35378,
  0.00681,
  0.34337,
  0.01135,
  0.35228,
  0.00882,
  0.34214,
  0.01469,
  0.35023,
  0.01061,
  0.34061,
  0.01768,
  0.34768,
  0.01214,
  0.33882,
  0.02023,
  0.34469,
  0.01337,
  0.33681,
  0.02228,
  0.34135,
  0.01427,
  0.33464,
  0.02378,
  0.33773,
  0.01482,
  0.33235,
  0.02469,
  0.33391,
  0.015,
  0.33,
  0.025,
  0.33,
  0.015,
  0.025,
  0.025,
  0.025,
  0.01531,
  0.02109,
  0.02518,
  0.02265,
  0.01622,
  0.01727,
  0.02573,
  0.02036,
  0.01772,
  0.01365,
  0.02663,
  0.01819,
  0.01977,
  0.01031,
  0.02786,
  0.01618,
  0.02232,
  0.00732,
  0.02939,
  0.01439,
  0.02531,
  0.00477,
  0.03118,
  0.01286,
  0.02865,
  0.00272,
  0.03319,
  0.01163,
  0.03227,
  0.00122,
  0.03536,
  0.01073,
  0.03609,
  0.00031,
  0.03765,
  0.01018,
  0.04,
  0,
  0.04,
  0.01,
]
`;

exports[`Equation Symbols - Brace Snapshot 2`] = `
Array [
  0,
  1,
  0,
  0.99,
  0.00391,
  0.99969,
  0.00235,
  0.98982,
  0.00773,
  0.99878,
  0.00464,
  0.98927,
  0.01135,
  0.99728,
  0.00681,
  0.98837,
  0.01469,
  0.99523,
  0.00882,
  0.98714,
  0.01768,
  0.99268,
  0.01061,
  0.98561,
  0.02023,
  0.98969,
  0.01214,
  0.98382,
  0.02228,
  0.98635,
  0.01337,
  0.98181,
  0.02378,
  0.98273,
  0.01427,
  0.97964,
  0.02469,
  0.97891,
  0.01482,
  0.97735,
  0.025,
  0.975,
  0.015,
  0.975,
  0.025,
  0.52,
  0.015,
  0.52,
  0.02518,
  0.51765,
  0.01531,
  0.51609,
  0.02573,
  0.51536,
  0.01622,
  0.51227,
  0.02663,
  0.51319,
  0.01772,
  0.50865,
  0.02786,
  0.51118,
  0.01977,
  0.50531,
  0.02939,
  0.50939,
  0.02232,
  0.50232,
  0.03118,
  0.50786,
  0.02531,
  0.49977,
  0.03319,
  0.50663,
  0.02865,
  0.49772,
  0.03536,
  0.50573,
  0.03227,
  0.49622,
  0.03765,
  0.50518,
  0.03609,
  0.49531,
  0.04,
  0.505,
  0.04,
  0.495,
  0.04,
  0.495,
  0.04,
  0.505,
  0.03765,
  0.49482,
  0.03609,
  0.50469,
  0.03536,
  0.49427,
  0.03227,
  0.50378,
  0.03319,
  0.49337,
  0.02865,
  0.50228,
  0.03118,
  0.49214,
  0.02531,
  0.50023,
  0.02939,
  0.49061,
  0.02232,
  0.49768,
  0.02786,
  0.48882,
  0.01977,
  0.49469,
  0.02663,
  0.48681,
  0.01772,
  0.49135,
  0.02573,
  0.48464,
  0.01622,
  0.48773,
  0.02518,
  0.48235,
  0.01531,
  0.48391,
  0.025,
  0.48,
  0.015,
  0.48,
  0.025,
  0.025,
  0.015,
  0.025,
  0.02469,
  0.02109,
  0.01482,
  0.02265,
  0.02378,
  0.01727,
  0.01427,
  0.02036,
  0.02228,
  0.01365,
  0.01337,
  0.01819,
  0.02023,
  0.01031,
  0.01214,
  0.01618,
  0.01768,
  0.00732,
  0.01061,
  0.01439,
  0.01469,
  0.00477,
  0.00882,
  0.01286,
  0.01135,
  0.00272,
  0.00681,
  0.01163,
  0.00773,
  0.00122,
  0.00464,
  0.01073,
  0.00391,
  0.00031,
  0.00235,
  0.01018,
  0,
  0,
  0,
  0.01,
]
`;
